[workspace]
members = [
    "core",
    "services",
    "lite-rpc",
    "quic-forward-proxy",
    "quic-forward-proxy-integration-test",
    "cluster-endpoints",
    "history",
    "stake_vote",
    "bench"
]

[workspace.package]
version = "0.2.3"
authors = ["gmgalactus <gmgalactus@mango.markets>", "Aniket Prajapati <contact@aniketprajapati.me>"]
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"
edition = "2021"

[workspace.dependencies]
solana-sdk = "~1.16.3"
solana-rpc-client = "~1.16.3"
solana-rpc-client-api = "~1.16.3"
solana-transaction-status = "~1.16.3"
solana-version = "~1.16.3"
solana-client = "~1.16.3"
solana-net-utils = "~1.16.3"
solana-pubsub-client = "~1.16.3"
solana-streamer = "~1.16.3"
solana-account-decoder = "~1.16.3"
solana-ledger = "~1.16.3"
solana-program = "~1.16.3"
itertools = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
borsh = "0.10.3"
thiserror = "1.0.40"
futures = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
clap = { version = "4.2.4", features = ["derive", "env"] }
dashmap = "5.4.0"
const_env = "0.1.2"
jsonrpsee = { version = "0.17.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
prometheus = "0.13.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"
async-channel = "1.8.0"
quinn = "0.9.4"
rustls = { version = "0.20.9", default-features = false }
solana-lite-rpc-services = {path = "services", version="0.2.3"}
solana-lite-rpc-core = {path = "core", version="0.2.3"}
solana-lite-rpc-cluster-endpoints = {path = "cluster-endpoints", version="0.2.3"}
solana-lite-rpc-history = {path = "history", version="0.2.3"}
solana-lite-rpc-stakevote = {path = "stake_vote", version="0.2.3"}

async-trait = "0.1.68"
yellowstone-grpc-client = "1.11.0"
yellowstone-grpc-proto = "1.11.0"
