[package]
name = "accounts-importer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Read AccountsDB data from AppendVec fiels"
keywords = ["solana"]
publish = false

[dependencies]

solana-frozen-abi-macro = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-accounts-db = { workspace = true }

solana-lite-rpc-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3.3"
env_logger = "0.9.0"
futures = { workspace = true }
itertools = { workspace = true}
log = { workspace = true }
memmap2 = "0.5.5"
num_cpus = "1.16.0"
#reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.7"
tar = "0.4.38"
thiserror = { workspace = true }
zstd = "0.11.2"
tokio = { workspace = true }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

