[package]
name = "solana-lite-rpc-accounts-on-demand"
version = "0.2.4"
edition = "2021"
description = "Library which implements accounts on demand service in lite-rpc. Whenever account is not available it will fetch from rpc and create a geyser stream to update it automatically."
rust-version = "1.73.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
 
solana-lite-rpc-core = { workspace = true }
solana-lite-rpc-accounts = { workspace = true }
lazy_static = {workspace = true}
async-trait = { workspace = true }
itertools = { workspace = true }
prometheus = { workspace = true }
tokio = "1.*"
futures = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }

quic-geyser-client = { workspace = true }
quic-geyser-common = { workspace = true }