[package]
name = "solana-lite-rpc-accounts-on-demand"
version = "0.3.0"
edition = "2021"
description = "Library which implements accounts on demand service in lite-rpc. Whenever account is not available it will fetch from rpc and create a geyser stream to update it automatically."
rust-version = "1.73.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-client = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-streamer = { workspace = true }
solana-account-decoder = { workspace = true }
solana-address-lookup-table-program = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.*"
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
quinn = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
async-trait = { workspace = true }
itertools = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
merge-streams = { workspace = true }

solana-lite-rpc-core = { workspace = true }
solana-lite-rpc-accounts = { workspace = true }
solana-lite-rpc-cluster-endpoints = { workspace = true }

yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"