[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { git = "https://github.com/solana-labs/solana.git" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git" } 
lite-client = { path = "../lite-client" }
log = "0.4.17"
anyhow = "1.0.66"
serde = "1.0.150"
