[package]
name = "solana-lite-rpc-cluster-endpoints"
version = "0.2.4"
edition = "2021"
description = "Core classes and methods used by solana lite rpc"
rust-version = "1.75.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
geyser-grpc-connector = { workspace = true }

solana-sdk = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-client = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-streamer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.*"
tokio-stream = { version = "0.1.14" , features = ["sync"]}
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
merge-streams = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
quinn = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
async-trait = { workspace = true }
derive_more = "0.99.17"
async-channel = { workspace = true }
solana-lite-rpc-core = { workspace = true }
solana-lite-rpc-util = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
itertools = {workspace = true}
prometheus = { workspace = true }
lazy_static = { workspace = true }
tonic-health = { workspace = true }
tonic = {workspace = true}
yellowstone-grpc-client = { git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", branch = "v1.13.0+solana.1.17.31" }
quic-geyser-client = { git = "https://github.com/blockworks-foundation/quic_geyser_plugin.git", branch = "v0.1.5_solana17" }
quic-geyser-common = { git = "https://github.com/blockworks-foundation/quic_geyser_plugin.git", branch = "v0.1.5_solana17" }