[package]
name = "solana-lite-rpc-core"
version = "0.1.0"
edition = "2021"
description = "Core classes and methods used by solana lite rpc"
rust-version = "1.67.1"

[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-client = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-streamer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
jsonrpsee = { workspace = true }
quinn = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }