[package]
name = "solana-lite-rpc-history"
version = "0.2.3"
edition = "2021"
description = "History implementations used by solana lite rpc"
rust-version = "1.70.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-rpc-client = { workspace = true }

dashmap = {workspace = true}
async-trait = { workspace = true }
tokio = "1.*"

solana-lite-rpc-core = {workspace = true}
solana-rpc-client-api = {workspace = true}
native-tls = { workspace = true }
postgres-native-tls = { workspace = true }
anyhow = { workspace = true }
log = {workspace = true}
chrono = {workspace = true}
bincode = {workspace = true}
base64 = {workspace = true}
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }